[package]
name = "srv"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
csv = "1"
dotenv = "0"
itertools = "0"
prost = "0"
prost-types = "0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0"
tonic-web = "0"

[build-dependencies]
tonic-build = "0"
